--- a/.github/workflows/publish-marketplace-vsix.yml
+++ b/.github/workflows/publish-marketplace-vsix.yml
@@ -24,7 +24,7 @@ jobs:
       uses: actions/checkout@v4
 
     - name: Setup .NET SDK
-      uses: actions/setup-dotnet@v4
+      uses: actions:actions/setup-dotnet@v4
       with:
         dotnet-version: '8.x'
 
@@ -45,20 +45,20 @@ jobs:
         /t:Build
       shell: pwsh
 
-    - name: Find VSIX File
+    - name: Find VSIX File 
       id: find_vsix 
       run: |
         $searchPath = "${{ env.SOLUTION_DIRECTORY }}/${{ env.VSIX_PROJECT_NAME }}/bin/${{ env.BUILD_CONFIGURATION }}"
-        Write-Host "DEBUG: Buscando archivo .vsix en el directorio: $searchPath"
+        Write-Host "DEBUG: Buscando archivo .vsix en el directorio: ${searchPath}"
         
-        Write-Host "DEBUG: Contenido de $searchPath:"
+        Write-Host "DEBUG: Contenido de ${searchPath}:" # <-- ¡Esta es la línea que causaba el problema!
         Get-ChildItem -Path $searchPath -ErrorAction SilentlyContinue | ForEach-Object { Write-Host " - $($_.Name)" }
 
         $vsixFiles = Get-ChildItem -Path $searchPath -Filter "*.vsix" -Recurse -ErrorAction SilentlyContinue
         
         if (-not $vsixFiles) {
-          Write-Host "ERROR: ¡Ningún archivo .vsix encontrado en la ruta esperada: $searchPath!"
-          throw "No se encontró ningún archivo .vsix."
+          Write-Host "ERROR: ¡Ningún archivo .vsix encontrado en la ruta esperada: ${searchPath}!"
+          throw "No se encontró ningún archivo .vsix." 
         }
 
         $vsixPath = $vsixFiles | Select-Object -First 1 -ExpandProperty FullName
@@ -68,8 +68,8 @@ jobs:
             throw "La ruta del archivo VSIX es nula o vacía."
         }
 
-        Write-Host "DEBUG: Archivo VSIX encontrado: $vsixPath"
-        echo "vsix_file=$vsixPath" >> $GITHUB_OUTPUT
+        Write-Host "DEBUG: Archivo VSIX encontrado: ${vsixPath}"
+        echo "vsix_file=${vsixPath}" >> $GITHUB_OUTPUT
       shell: pwsh
 
     - name: Upload VSIX as Artifact
