--- a/.github/workflows/publish-marketplace-vsix.yml
+++ b/.github/workflows/publish-marketplace-vsix.yml
@@ -24,7 +24,7 @@ jobs:
       uses: actions/checkout@v4
 
     - name: Setup .NET SDK
-      uses: actions:actions/setup-dotnet@v4
+      uses: actions/setup-dotnet@v4 # <-- ¡CORREGIDO AQUÍ!
       with:
         dotnet-version: '8.x'
 
@@ -51,7 +51,7 @@ jobs:
         $searchPath = "${{ env.SOLUTION_DIRECTORY }}/${{ env.VSIX_PROJECT_NAME }}/bin/${{ env.BUILD_CONFIGURATION }}"
         Write-Host "DEBUG: Buscando archivo .vsix en el directorio: ${searchPath}"
         
-        Write-Host "DEBUG: Contenido de ${searchPath}:"
+        Write-Host "DEBUG: Contenido de ${searchPath}:" 
         Get-ChildItem -Path $searchPath -ErrorAction SilentlyContinue | ForEach-Object { Write-Host " - $($_.Name)" }
 
         $vsixFiles = Get-ChildItem -Path $searchPath -Filter "*.vsix" -Recurse -ErrorAction SilentlyContinue
