--- a/.github/workflows/publish-marketplace-vsix.yml
+++ b/.github/workflows/publish-marketplace-vsix.yml
@@ -24,7 +24,7 @@ jobs:
       uses: actions/checkout@v4
 
     - name: Setup .NET SDK
-      uses: actions/setup-dotnet@v4 # <-- ¡CORREGIDO AQUÍ!
+      uses: actions/setup-dotnet@v4 
       with:
         dotnet-version: '8.x'
 
@@ -45,7 +45,7 @@ jobs:
         /t:Build
       shell: pwsh
 
-    - name: Find VSIX File 
+    - name: Find VSIX File # Modificado para trimado más robusto
       id: find_vsix 
       run: |
         $searchPath = "${{ env.SOLUTION_DIRECTORY }}/${{ env.VSIX_PROJECT_NAME }}/bin/${{ env.BUILD_CONFIGURATION }}"
@@ -61,15 +61,19 @@ jobs:
           throw "No se encontró ningún archivo .vsix." 
         }
 
-        $vsixPath = $vsixFiles | Select-Object -First 1 -ExpandProperty FullName
-        
-        if ([string]::IsNullOrWhiteSpace($vsixPath)) {
-            Write-Host "ERROR: La ruta del archivo VSIX es nula o vacía después de la selección."
+        # Aseguramos que solo tomamos la primera ruta y la limpiamos a fondo
+        $foundVsixFullPath = ($vsixFiles | Select-Object -First 1 -ExpandProperty FullName)
+        $vsixPathOutput = $foundVsixFullPath.ToString().Trim() # Convertir a string y trimar
+
+        if ([string]::IsNullOrWhiteSpace($vsixPathOutput)) {
+            Write-Host "ERROR: La ruta del archivo VSIX es nula o vacía después de la selección y limpieza."
             throw "La ruta del archivo VSIX es nula o vacía."
         }
 
-        Write-Host "DEBUG: Archivo VSIX encontrado: ${vsixPath}"
-        echo "vsix_file=${vsixPath}" >> $GITHUB_OUTPUT
+        Write-Host "DEBUG: Archivo VSIX encontrado (FINAL para salida): ${vsixPathOutput}"
+        # Intentamos una forma ligeramente diferente de escribir la salida, aunque la anterior es estándar.
+        # Esto escribe directamente al archivo de entorno GITHUB_OUTPUT.
+        Add-Content -Path $env:GITHUB_OUTPUT -Value "vsix_file=$vsixPathOutput"
       shell: pwsh
 
     - name: Upload VSIX as Artifact
