--- a/.github/workflows/publish-marketplace-vsix.yml
+++ b/.github/workflows/publish-marketplace-vsix.yml
@@ -100,24 +100,24 @@ jobs:
         # 3. Extraer detalles para el manifiesto JSON de publicación
         $extensionId = $vsixManifestXml.PackageManifest.Metadata.Identity.Id
         $publisherId = $vsixManifestXml.PackageManifest.Metadata.Identity.Publisher
-        $extensionName = $vsixManifestXml.PackageManifest.Metadata.DisplayName
-        # La versión se infiere del VSIX, pero se puede incluir para claridad
         $version = $vsixManifestXml.PackageManifest.Metadata.Identity.Version
+        # $extensionName no es necesario aquí, se infiere del VSIX o del Marketplace.
 
         Write-Host "DEBUG: Datos extraídos del source.extension.vsixmanifest:"
         Write-Host "DEBUG:   ID de la extensión: $extensionId"
         Write-Host "DEBUG:   ID del publicador: $publisherId"
-        Write-Host "DEBUG:   Nombre de la extensión: $extensionName"
         Write-Host "DEBUG:   Versión: $version"
 
-        # 4. Crear el contenido del manifiesto de publicación JSON
+        # 4. Crear el contenido del manifiesto de publicación JSON con la estructura 'identity' anidada
         $publishManifestContent = @{
-            extensionId = $extensionId
-            publisherId = $publisherId
-            extensionName = $extensionName
-            version = $version
-            # Puedes añadir más propiedades si son necesarias para tu extensión específica
-            # Por ejemplo: "categories": ["Visual Studio", "Tools"], "tags": ["template", "fractalize"]
+            identity = @{ # <--- ¡Nueva sección 'identity' y estructura corregida!
+                id = $extensionId
+                publisher = $publisherId
+                version = $version
+            }
+            # Puedes añadir otras propiedades aquí si el Marketplace las requiere para la publicación inicial,
+            # por ejemplo, "galleryFlags": "Public", "tags": ["tag1", "tag2"], "categories": ["category1"]
+            # Pero para la publicación básica, 'identity' es lo principal.
         } | ConvertTo-Json -Depth 10 # Convertir a JSON
 
         # 5. Guardar el manifiesto JSON en un archivo temporal
@@ -133,6 +133,6 @@ jobs:
         # 6. Ejecutar VsixPublisher.exe con los argumentos correctos
         & "${vsixPublisherPath}" publish `
             -payload "${{ steps.find_vsix.outputs.vsix_file }}" `
-            -publishManifest "${publishManifestJsonPath}" ` # <-- ¡Argumento corregido!
+            -publishManifest "${publishManifestJsonPath}" ` # <-- ¡Argumento corregido y apuntando al JSON correcto!
             -personalAccessToken "${{ secrets.VS_MARKETPLACE_PAT }}"
       shell: pwsh
